Bug 131952 - Resizing window breaks application menu view
Summary: Resizing window breaks application menu view
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-04-07 08:30 UTC by Mike Kaganski
Modified: 2020-04-15 23:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screen cast with menu problem (257.82 KB, image/gif)
2020-04-07 08:30 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-04-07 08:30:23 UTC
Created attachment 159385 [details]
Screen cast with menu problem

Resizing the window makes main menu to change to a purple rectangle (see attached screen cast).

Version: 7.0.0.0.alpha0+ (x64)
Build ID: a8d26a0bb40c101394ded8061d1b58048153631b
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 1 Roman Kuznetsov 2020-04-07 09:48:58 UTC
confirm in

Версия: 7.0.0.0.alpha0+ (x64)
ID сборки: 6c59c9d2b8818674640a50656ffba90f9cd3900e
Потоков ЦП: 4; ОС: Windows 10.0 Build 18363; Отрисовка ИП: Skia/Vulkan; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 2 Commit Notification 2020-04-15 13:11:11 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c3b044abc2906bbb56a0f359f89ee7c1eb400c93

keep old contents of resized windows with Skia (tdf#131952)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.