keep old contents of resized windows with Skia (tdf#131952)

It seems this is necessary in rare cases.

Change-Id: Id7557a069bc0adf61b34068f00761e16b961fbc5